# Ticks

./: .gitignore  CMakeLists.txt  README.md  check_license_compatibility.py  main.cppm
config/: default_config.yaml
src/modules/controller/: application.cpp  application.ixx
src/modules/model/: active_item.ixx  config.cpp  config.ixx  item.ixx  timer.ixx
src/modules/view/: config_dialog.cpp  config_dialog.ixx  left_panel.cpp  left_panel.ixx  main_frame.cpp  main_frame.ixx  right_panel.cpp  right_panel.ixx
test/: CMakeLists.txt  test_main.cppm
test/model/: item_test.cppm
